# standupbrain

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  release.yml
src/standupbrain/: cli.py  docs.py  git.py  git_init.py  jira.py  jira_init.py  llm.py  llm_init.py  llm_prompt.py  preferences_init.py  shared.py  utils.py
tests/: cli_test.py  conftest.py  git_init_test.py  git_test.py  jira_init_test.py  jira_test.py  llm_init_test.py  llm_test.py
tests/e2e/: llm_test.py
tests/unit/: cli_test.py  git_test.py  shared_test.py
