[project]
name = "standupbrain"
version = "1.0.0"
description = "What the heck did I do yesterday?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pytest>=9.0.1",
    "ruff==0.14.6",
]

[project.scripts]
standupbrain = "standupbrain.cli:main"


[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/standupbrain"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "pyproject.toml:tool.commitizen.version"
]
tag_format = "v$version"


[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true


[tool.ruff.lint]
select = [
    "A",  # https://beta.ruff.rs/docs/rules/#flake8-builtins-a
    "ANN",  # https://beta.ruff.rs/docs/rules/#flake8-annotations-ann
    "ARG",  # https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
    "B",  # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "C4",  # https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "COM",  # https://beta.ruff.rs/docs/rules/#flake8-commas-com
    "C90",  # https://beta.ruff.rs/docs/rules/#mccabe-c90
    "E",  # default! https://beta.ruff.rs/docs/rules/#error-e
    "EM",  # https://beta.ruff.rs/docs/rules/#flake8-errmsg-em
    "ERA",  # https://beta.ruff.rs/docs/rules/#eradicate-era  # we'd like for this to warn
    "EXE",  # https://beta.ruff.rs/docs/rules/#flake8-executable-exe
    "F",  # default! https://beta.ruff.rs/docs/rules/#pyflakes-f
    "FBT",  # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt
    "G",  # https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
    "I",  # https://beta.ruff.rs/docs/rules/#isort-i
    "ICN",  # https://beta.ruff.rs/docs/rules/#flake8-import-conventions-icn
    "ISC",  # https://beta.ruff.rs/docs/rules/#flake8-implicit-str-concat-isc
    "N",  # https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PGH",  # https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
    "PIE",  # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PL",  # https://beta.ruff.rs/docs/rules/#pylint-pl
    "PLE",  # https://beta.ruff.rs/docs/rules/#error-ple
    "PLR",  # https://beta.ruff.rs/docs/rules/#refactor-plr
    "PLW",  # https://beta.ruff.rs/docs/rules/#warning-plw
    "PT",  # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt
    "PTH",  # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "PYI",  # https://beta.ruff.rs/docs/rules/#flake8-pyi-pyi
    "Q",  # https://beta.ruff.rs/docs/rules/#flake8-quotes-q
    "RET",  # https://beta.ruff.rs/docs/rules/#flake8-return-ret
    "RSE",  # https://beta.ruff.rs/docs/rules/#flake8-raise-rse
    "RUF",  # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "S",  # https://beta.ruff.rs/docs/rules/#flake8-bandit-s
    "SLF",  # https://beta.ruff.rs/docs/rules/#flake8-self-slf
    "SIM",  # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "TCH",  # https://beta.ruff.rs/docs/rules/#flake8-type-checking-tch
    "TID",  # https://beta.ruff.rs/docs/rules/#flake8-tidy-imports-tid
    "TRY",  # https://beta.ruff.rs/docs/rules/#tryceratops-try
    "W",  # https://beta.ruff.rs/docs/rules/#warning-w
    "UP",  # https://beta.ruff.rs/docs/rules/#pyupgrade-up
    "YTT",  # https://beta.ruff.rs/docs/rules/#flake8-2020-ytt
]
ignore = [
    "S311",  # not using randomness for cryptography
    "S101",  # assert is awesome
    "S603",  # We're making a lot of Bash calls
    "S607",  # So many Bash calls
    "S113",  # requests calls without timeouts are fine
    "PLR0913",  # sometimes tests need 6+ fixtures
    "FBT001",  # bools are great"
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"src/standupbrain/git.py" = [
    "PLW1510",
]
"src/standupbrain/llm_init.py" = [
    "TRY300",  # these seem well placed to me
]
"tests/unit/git_init_test.py" = [
    "ARG001",  # these tests have unused args
    "S105",  # this is a mock secret, nothing to worry about here
]
